# music21-composer-mcp

./: .gitignore  README.md  TECH_SPEC.md  pyproject.toml
src/composer_mcp/: __init__.py  errors.py  launcher.py
src/composer_mcp/adapters/: __init__.py  http_adapter.py
src/composer_mcp/core/: __init__.py  harmony.py  melody.py  models.py  reharmonize.py  service.py  validation.py
tests/: __init__.py  test_export_midi.py  test_harmony.py  test_http_adapter.py  test_melody.py  test_reharmonize.py  test_validation.py
